--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup Go
         uses: actions/setup-go@v4
+        with:
+          go-version: '1.21.x'
       - name: Install dependencies
         run: go get .
       - name: Build
