--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Build
         run: go build -v ./...
       - name: Test with the Go CLI
-        run: go test ./component/...
+        run: go test ./obj/...
